# steam-api-project

./: .gitignore  index.html  pyproject.toml
.github/workflows/: static.yml
cs670/: __init__.py  quarto_helpers.py
notebooks/: .Final_submission.ipynb.layout  .downloader.ipynb.layout  Final_submission.ipynb  downloader.ipynb  sandbox.ipynb
notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  Untitled1-checkpoint.ipynb  downloader-checkpoint.ipynb  steamnb-checkpoint.ipynb
notebooks/qmdstuff/: final.html  test.html  test.qmd
notebooks/qmdstuff/.ipynb_checkpoints/: test-checkpoint.qmd
notebooks/qmdstuff/final_files/libs/bootstrap/: bootstrap-e57b7b0bc837211718f340ae508b3b77.min.css
notebooks/qmdstuff/test_files/libs/bootstrap/: bootstrap-56e7ae5e4bbd49b49a5d806ebf3d7402.min.css
scripts/: pull_top_10k.py
sctipts/: clustering_scripts.py  poc_script.py
tests/: test_file.py
